# qxmlc

./: CMakeLists.txt  README.txt  bootstrap  bootstrap_release  checkforfail.sh  createXmlHeader.sh  do_debug.sh  do_distclean.sh  do_release.sh  pack.sh  test.sh  todo.txt  verfy.sh
Releaselinux64/: ca_qxmlc
ca_libxmlca/: CMakeLists.txt
ca_libxmlca/inc/: caargopt.h  caargv.h  cacoder.h  cainterfaces.h  calcfxml.h  camain.h  caminiXml.h  capackedfiles.h  caqxmlc.h
ca_libxmlca/src/: caargopt.cpp  caargv.cpp  cacoder.cpp  calcfxml.cpp  camain.cpp  caminiXml.cpp  capackedfiles.cpp  caqxmlc.cpp
ca_logger/: CMakeLists.txt
ca_logger/inc/: calogger.h  calogiface.h
ca_logger/src/: calogger.cpp
ca_packfile/: CMakeLists.txt
ca_packfile/src/: packfile.cpp
ca_private/: CMakeLists.txt  beauty.sh  calcfxml.h  caminiXml.h  model.cpp  model.h  model.xml
ca_qxmlc/: CMakeLists.txt  beauty.sh  bootstrap.sh
ca_qxmlc/inc/: calogiface.h  caqxmlc.h
ca_qxmlc/src/: mainApp.cpp
ca_test/: CMakeLists.txt
ca_test/inc/: CPPtester.h  docMacro.h
ca_test/src/: mainApp.cpp  testcalogger.cpp  testminiXml.cpp
ca_xml_dylib/: CMakeLists.txt  bind.sh  create_dylib.sh  setup.py
ca_xml_dylib/bind/: pybind11.cpp
ca_xmlsh/: CMakeLists.txt  test.sh
ca_xmlsh/src/: xmlcash.cpp
testfiles/: calcfxml.h  caminiXml.h  file1.xml  file10.xml  file11.xml  file12.xml  file13.xml  file14.cpp  file14.h  file15.xml  file2.xml  file3.xml  file4.xml  file5.xml  file6.xml  file7.xml  file8.xml  file9.xml
